# vnl-playground

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  train.sh  train_intention.sh  train_intention_old.sh  train_intention_rear.sh
notebooks/: MuscleVTorque.csv  diagram_figures.ipynb  figsforMay20.ipynb  josh_decoder_swap.ipynb  josh_intention_training_test.ipynb  load_ckpt_and_render.ipynb  mouse_env_test.ipynb  rodent_env_test.ipynb  rodent_flat_walk_training.ipynb
notebooks/post-training/: transfer_behavioral_analysis.ipynb  visualize_behavior_snapshot_sequece.ipynb
notebooks/pre-training/: ckpt_inspection.ipynb  maze_forage_env_dev.ipynb
vnl_mjx/: LabMeetingMay20Markdown.ipynb  README_VAE.md  eval_vae.py  flatten_wrapper.py  rollout_benchmark_imitation.py  sac.py  test_env.ipynb  train.py  train_imitation.py  train_imitation_brax.py  train_intention.py  train_intention_old.py  train_intention_rear.py  train_intention_scott.py  train_intentions_scott.py  train_mouse.py  train_sac.py  train_vae.py
vnl_mjx/config/: arm_reach.yaml  bowl_escape.yaml  bowl_escape_transfer.yaml  celegans_imitation.yaml  flat_arena_transfer.yaml  maze_forage_transfer.yaml  vae_distillation.yaml
vnl_mjx/environment/: __init__.py  vae_wrapper.py
vnl_mjx/models/: __init__.py  vae.py
vnl_mjx/tasks/: bowl_escape.py  rewards.py  utils.py  vae_distillation.py
vnl_mjx/tasks/celegans/: base.py  consts.py  imitation.py  reference_clips.py  visualize.py
vnl_mjx/tasks/celegans/xmls/: celegans.xml  celegans_fast.xml  celegans_motor.xml  celegans_slide.xml  white_arena.xml
vnl_mjx/tasks/fruitfly/: base.py  consts.py  visualize.py
vnl_mjx/tasks/fruitfly/xmls/: fruitfly_fast.xml  fruitfly_force.xml
vnl_mjx/tasks/mouse/: base.py  consts.py  mouse_reach.py  mouse_reach_josh.py  visualize.py
vnl_mjx/tasks/mouse/xmls/: akira_muscle.xml  akira_torque.xml  josh_akira.xml  roblox_arm.xml
vnl_mjx/tasks/mouse/xmls/assets/: Bone_Segments_Hand_fixed.stl
vnl_mjx/tasks/rodent/: base.py  bowl_escape.py  bowl_escape_old.py  consts.py  flat_arena.py  head_track_rear.py  imitation.py  maze_forage.py  reference_clips.py  render_ghost.py  rewards.py  visualize.py  wrappers.py
vnl_mjx/tasks/rodent/xmls/: arena.xml  rodent.xml  rodent_box_feet.xml  rodent_only.xml  rodent_sphere_feet.xml
vnl_mjx/tasks/stick/: base.py  consts.py  visualize.py
vnl_mjx/tasks/stick/xmls/: stick_fast.xml  sungaya_inexpectata_box.xml
vnl_mjx/training/: __init__.py  losses.py  training_loop.py
vnl_mjx/utils/: __init__.py  track_mjx_loader.py  vae_checkpointing.py
vnl_playground/: train.py  train_imitation.py  train_imitation_brax.py  train_intention.py  train_mouse.py
vnl_playground/config/: celegans_imitation.yaml
vnl_playground/tasks/: utils.py
vnl_playground/tasks/celegans/: base.py  consts.py  imitation.py  reference_clips.py
vnl_playground/tasks/celegans/reference_data/: .gitignore  reference2d.h5.dvc  reference3d.h5.dvc
vnl_playground/tasks/celegans/xmls/: celegans_fast.xml  celegans_slide.xml
vnl_playground/tasks/fruitfly/: base.py  visualize.py
vnl_playground/tasks/mouse/: base.py  mouse_reach.py  visualize.py
vnl_playground/tasks/rodent/: base.py  bowl_escape.py  flat_arena.py  imitation.py  maze_forage.py  reference_clips.py  visualize.py
vnl_playground/tasks/rodent/reference_data/: .gitignore  reference_clips.h5.dvc
vnl_playground/tasks/rodent/xmls/: rodent.xml  rodent_box_feet.xml
vnl_playground/wrappers/: flatten_observation.py
