[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vnl-playground"
authors = [
    {name = "Charles Zhang", email = "charleszhang@fas.harvard.edu"},
    {name = "Scott Yang", email = "scyang@salk.com"},
    {name = "Aidan Sirbu", email = "aidan.sirbu@mail.mcgill.ca"},
    {name = "Talmo Pereira", email = "talmo@salk.edu"}]
description=  "VNL-PLAYGROUND: A Python package for fast reinforcement learning-based imitation learning tracking for agents"
requires-python = ">=3.7"
keywords = ["tracking", "imitation learning", "deep learning"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",]
dependencies = [
    "brax==0.13.0",
    "wandb",
    "mujoco",
    "dm_control",
    "mujoco-mjx[warp]>=3.3.5",
    "warp-lang>=1.9.0",
    "mediapy",
    "jax>=0.7.2",
    "flax",
    "optax",
    "imageio[ffmpeg]",
    "hydra-core",
    "h5py",
    "numba",
    "scikit-learn",
    "seaborn",
    "matplotlib",
    "pandas",
    "numpy",
    "playground",
    "dvc",
    ]

dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "vnl_playground.version.__version__"}
readme = {file = ["README.md"], content-type="text/markdown"}

[project.optional-dependencies]
cuda12 = ["jax[cuda12]==0.7.2 ; sys_platform == 'linux'"]
cuda13 = ["jax[cuda13]==0.7.2 ; sys_platform == 'linux'"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-watch",
    "black",
    "pydocstyle",
    "toml",
    "twine",
    "build",
    "mkdocs-material[imaging]",
    "mkdocs-jupyter",
    "mkdocstrings[python]>=0.18",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mike",
    ]

with-cuda = [
    "vnl-playground[dev]",
    "flax[all]",
    "optax[all]==0.2.5",
    "jax[cuda12]==0.6.2",
]

[project.urls]
Repository = "https://github.com/talmolab/vnl-playground"

[tool.setuptools.packages.find]
exclude = ["site", "model_checkpoints*", "checkpoints*", "wandb*", "outputs"]

[tool.black]
line-length = 88

[pydocstyle]
convention = "google"
match-dir = "vnl_playground"